--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,24 @@
 {
-    "name": "tu-proyecto/laravel",
+    "name": "cordev-developer/demo-cognito-app",
     "type": "project",
-    "description": "Proyecto Laravel 12",
+    "description": "Aplicación de ejemplo Laravel 12 con autenticación y gestión de usuarios mediante AWS Cognito.",
     "require": {
         "php": "^8.4",
-        "laravel/framework": "^12.0",
+        "ellaisys/aws-cognito": "dev-master",
         "guzzlehttp/guzzle": "^7.8",
-        "ellaisys/aws-cognito": "^1.3"
+        "laravel/framework": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
         "phpunit/phpunit": "^10.2",
         "laravel/breeze": "^2.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/cordev-developer/aws-cognito-php"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/"
